# DesktopAssistant

./: .gitignore  README.md  声线设计方案.md  进度记录.md
app/: README.md  index.html  package.json  pnpm-lock.yaml
app/scripts/: download-models.sh
app/src/: ipc.ts  main.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/build_helpers/: window_helper.m
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  config.rs  cosyvoice3.rs  lib.rs  llm.rs  paths.rs  tray.rs  tts.rs  voice.rs  window_level.rs
app/src-tauri/src/agent/: bus.rs  claude_hook.rs  detector.rs  event.rs  http_server.rs  mod.rs  session.rs
app/src/agent/: events.ts
app/src/behavior/: engine.ts
app/src/character/: manifest.ts  store.ts  voice.ts  webFs.ts
app/src/conversation/: compressor.ts  manager.ts
app/src/live2d/: motionResolver.ts  renderer.ts
app/src/llm/: emotionParser.ts  emotionTypes.ts  identityAnchor.ts  persona.ts  promptAssembler.ts  (+1 more)
app/tests/: agentEvents.test.ts  behavior.test.ts  character.test.ts  clickThrough.test.ts  cosyvoice3.test.ts  dragTapAndOverride.test.ts  emotionSystem.test.ts  ipc.test.ts  memoryAndConversation.test.ts  motionResolver.test.ts  onboarding.test.ts  ttsManager.test.ts  voiceApproval.test.ts
docs/: 语音转发与审批分级-架构与实现文档.md  语音转发与审批分级设计方案.md
voice-training/: README.md
voice-training/scripts/: 01_setup_env.sh  02_prepare_data.sh  03_train_all.sh  04_start_server.sh  05_verify.sh  extract_aishell3_speakers.py  quick_start.sh  train_character.py  update_manifests.py
(+62 files in other folders)
