[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.64"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12.0"
regex = "1.12.4"
portable-pty = "0.9.0"
crossterm = "0.29.0"
ureq = { version = "3.3.0", features = ["json"] }
msedge-tts = "0.4.0"
base64 = "0.22.1"
rustls = { version = "0.23.40", features = ["ring"] }
cpal = "0.18.1"
hound = "3.5.1"
tauri-plugin-global-shortcut = "2.3.2"
keyring = { version = "3", features = ["apple-native"] }
libc = "0.2.186"

